app/assets/stylesheets/search.scss
.search-bar-homepage {
  display: block;
  border-radius: 4px 0 0 4px;
  background: #fff;
  width: 480px;
  height: 63px;
  margin: 0 auto;
}

// .search-bar-homepage-container{
//   margin: 0 auto;
// }

.search-bar {
  display: table;
  border-radius: 4px;
  background: #fff;
  table-layout: auto;
  vertical-align: top;
  width: 100%;
  display: flex;
  height: 100%;
  float: left;
}

.psuedo-text{
  margin-right: 20px;
}

.search-bar-container{
  display: table;
  border-radius: 4px;
  background: #fff;
  table-layout: auto;
  vertical-align: top;
  width: 100%;
  display: flex;
  height: 100%;
  margin-top: 27px;
}

.psuedo-input{
  box-shadow: none;
  padding: 8px 12px;
  border: none;
  border-radius: 0;
  background: #fff;
  margin: 0;
  // height: 36px;
  line-height: 20px;
  vertical-align: -webkit-baseline-middle;
}

.psuedo-near{
  width: 50%;
  display: flex;
  align-items: center;
  // border-top-right-radius: 3px;
  // float: right;
}

.psuedo-near::before {
  content: "";
  position: absolute;
  top: 8px;
  right: 0;
  bottom: 8px;
  width: 1px;
  background: #ccc;
}

.psuedo-find{
  width: 100%;
  border-radius: 3px;
  display: flex;
  align-items: center;
  // float: right;
}

.find-placeholder{
  width: 100%;
}

.search-form-container{
  height: 100%;
  width: 100%;
}
.submit-btn{
  border-radius: 0 4px 4px 0;
  border: 0;
  background: #bf1010;
  padding: 14px 20px 13px;
  box-shadow: none;
  color: white;
  cursor: pointer;
}

.submit-btn input{
  cursor: pointer;
}

